updates to the navbar

--- a/Project-G06/Project-G06.csproj
+++ b/Project-G06/Project-G06.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Project_G06</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
